Создание контроллера и представления для таблицы Departments

--- a/AccountEnterprise.WebMVC/Views/Accounts/Index.cshtml
+++ b/AccountEnterprise.WebMVC/Views/Accounts/Index.cshtml
@@ -25,7 +25,7 @@
                 <td>@account.BankName</td>
                 <td>@account.Type</td>
                 <td>
-                    <a asp-controller="Accounts" asp-action="Edit" asp-route-id="@account.Id">Редактировать</a> |
+                    <a asp-controller="Accounts" asp-action="Details" asp-route-id="@account.Id">Детали</a> |
                     <a asp-controller="Accounts" asp-action="Delete" asp-route-id="@account.Id">Удалить</a>
                 </td>
             </tr>
