--- a/AccountEnterprise.WebMVC/Views/Categories/Index.cshtml
+++ b/AccountEnterprise.WebMVC/Views/Categories/Index.cshtml
@@ -20,7 +20,7 @@
             <tr>
                 <td>@category.Name</td>
                 <td>
-                    <a asp-controller="Categories" asp-action="Edit" asp-route-id="@category.Id">Редактировать</a> |
+                    <a asp-controller="Categories" asp-action="Details" asp-route-id="@category.Id">Детали</a>        
                     <a asp-controller="Categories" asp-action="Delete" asp-route-id="@category.Id">Удалить</a>
                 </td>
             </tr>
