--- a/AccountEnterprise.WebMVC/Views/Accounts/Details.cshtml
+++ b/AccountEnterprise.WebMVC/Views/Accounts/Details.cshtml
@@ -9,6 +9,9 @@
     <h4>Счет</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">ID</dt>
+        <dd class="col-sm-10">@Model.Id</dd>
+
         <dt class="col-sm-2">Номер</dt>
         <dd class="col-sm-10">@Model.Number</dd>
 
