--- a/AccountEnterprise.WebMVC/Views/Departments/Details.cshtml
+++ b/AccountEnterprise.WebMVC/Views/Departments/Details.cshtml
@@ -9,6 +9,9 @@
     <h4>Департамент</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">ID</dt>
+        <dd class="col-sm-10">@Model.Id</dd>
+
         <dt class="col-sm-2">Название</dt>
         <dd class="col-sm-10">@Model.Name</dd>
     </dl>
