--- a/AccountEnterprise.WebMVC/Views/Employees/Details.cshtml
+++ b/AccountEnterprise.WebMVC/Views/Employees/Details.cshtml
@@ -9,6 +9,9 @@
     <h4>Сотрудник</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">ID</dt>
+        <dd class="col-sm-10">@Model.Id</dd>
+
         <dt class="col-sm-2">Фамилия</dt>
         <dd class="col-sm-10">@Model.Surname</dd>
 
