--- a/AccountEnterprise.WebMVC/Views/OperationTypes/Details.cshtml
+++ b/AccountEnterprise.WebMVC/Views/OperationTypes/Details.cshtml
@@ -9,10 +9,13 @@
     <h4>Тип операции</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">ID</dt>
+        <dd class="col-sm-10">@Model.Id</dd>
+
         <dt class="col-sm-2">Название</dt>
         <dd class="col-sm-10">@Model.Name</dd>
     </dl>
 </div>
 
-<a asp-controller="Departments" asp-action="Edit" asp-route-id="@Model.Id">Редактировать</a> |
-<a asp-controller="Departments" asp-action="Index">Назад к списку</a>
+<a asp-controller="OperationTypes" asp-action="Edit" asp-route-id="@Model.Id">Редактировать</a> |
+<a asp-controller="OperationTypes" asp-action="Index">Назад к списку</a>
