--- a/AccountEnterprise.WebMVC/Views/Shared/_LoginPartial.cshtml
+++ b/AccountEnterprise.WebMVC/Views/Shared/_LoginPartial.cshtml
@@ -29,4 +29,7 @@ else
     <ul class="nav navbar-nav navbar-right">
         <li class="nav-item"><a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Вход</a></li>
     </ul>
+    <ul class="nav navbar-nav navbar-right">
+        <li class="nav-item"><a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Регистрация</a></li>
+    </ul>
 }
