--- a/AccountEnterprise.WebMVC/Views/Operations/Edit.cshtml
+++ b/AccountEnterprise.WebMVC/Views/Operations/Edit.cshtml
@@ -23,7 +23,7 @@
 
     <div class="form-group">
         <label asp-for="Amount" class="control-label">Сумма</label>
-        <input asp-for="Amount" class="form-control" type="number" step="0.01" />
+        <input asp-for="Amount" class="form-control" type="number" min="0.01" step="0.01" />
         <span asp-validation-for="Amount" class="text-danger"></span>
     </div>
 
