--- a/AccountEnterprise.WebMVC/Views/Accounts/Edit.cshtml
+++ b/AccountEnterprise.WebMVC/Views/Accounts/Edit.cshtml
@@ -36,7 +36,7 @@
 
     <div class="form-group">
         <label asp-for="DepartmentId" class="control-label">Отдел</label>
-        <select asp-for="DepartmentId" class="form-control" asp-items="ViewBag.Departments"></select>
+        <select asp-for="DepartmentId" class="form-control" asp-items="ViewBag.DepartmentId"></select>
         <span asp-validation-for="DepartmentId" class="text-danger"></span>
     </div>
 
