--- a/AccountEnterprise.WebMVC/Views/Operations/Index.cshtml
+++ b/AccountEnterprise.WebMVC/Views/Operations/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AccountEnterprise.Application.Dtos.OperationDto>
+﻿@model AccountEnterprise.Domain.RequestFeatures.PagedList<AccountEnterprise.Application.Dtos.OperationDto>
 
 @{
     Layout = "_Layout";
@@ -68,3 +68,49 @@
         }
     </tbody>
 </table>
+<div class="pagination">
+    @if (Model.MetaData.HasPrevious)
+    {
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@(Model.MetaData.CurrentPage - 1)" asp-route-searchType="@ViewData["searchType"]" asp-route-searchMonth="@ViewData["searchMonth"]">Назад</a>
+    }
+
+    @if (Model.MetaData.CurrentPage > 3)
+    {
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="1" asp-route-searchType="@ViewData["searchType"]" asp-route-searchMonth="@ViewData["searchMonth"]">1</a>
+        @if (Model.MetaData.CurrentPage > 4)
+        {
+            <span>...</span>
+        }
+    }
+
+    @{
+        var startPage = Math.Max(2, Model.MetaData.CurrentPage - 2);
+        var endPage = Math.Min(Model.MetaData.CurrentPage + 2, Model.MetaData.TotalPages - 1);
+    }
+
+    @for (int i = startPage; i <= endPage; i++)
+    {
+        if (i == Model.MetaData.CurrentPage)
+        {
+            <span class="btn btn-secondary disabled">@i</span>
+        }
+        else
+        {
+            <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@i" asp-route-searchType="@ViewData["searchType"]" asp-route-searchMonth="@ViewData["searchMonth"]">@i</a>
+        }
+    }
+
+    @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 2)
+    {
+        @if (Model.MetaData.CurrentPage < Model.MetaData.TotalPages - 3)
+        {
+            <span>...</span>
+        }
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@Model.MetaData.TotalPages" asp-route-searchType="@ViewData["searchType"]" asp-route-searchMonth="@ViewData["searchMonth"]">@Model.MetaData.TotalPages</a>
+    }
+
+    @if (Model.MetaData.HasNext)
+    {
+        <a class="btn btn-primary" asp-action="Index" asp-route-PageNumber="@(Model.MetaData.CurrentPage + 1)" asp-route-searchType="@ViewData["searchType"]" asp-route-searchMonth="@ViewData["searchMonth"]">Вперед</a>
+    }
+</div>
